Starting CI and repaired the project